<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/primary_size"
    android:paddingBottom="@dimen/primary_size">

    <LinearLayout
        android:id="@+id/user_details_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/user_image"
            android:layout_width="@dimen/img_avatar_size"
            android:layout_height="@dimen/img_avatar_size"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/user_image"
            android:scaleType="centerInside" />

        <TextView
            android:id="@+id/user_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/primary_size"
            android:layout_marginBottom="@dimen/primary_size"
            android:textSize="@dimen/user_title_size"
            tools:text="User 1" />

        <TextView
            android:id="@+id/person_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/primary_size"
            android:textSize="@dimen/primary_text_size"
            tools:text="User 1" />

        <LinearLayout
            android:id="@+id/repos_and_gists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/primary_size"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_repositories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repositories"
                android:textSize="@dimen/primary_text_size" />

            <TextView
                android:id="@+id/public_repos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:textSize="@dimen/primary_text_size"
                tools:text="0" />

            <TextView
                android:id="@+id/label_public_gists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gists"
                android:textSize="@dimen/primary_text_size" />

            <TextView
                android:id="@+id/public_gists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="15dp"
                android:textSize="@dimen/primary_text_size"
                tools:text="0" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/followers_and_following"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/primary_size"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followers"
                android:textSize="@dimen/primary_text_size" />

            <TextView
                android:id="@+id/followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:textSize="@dimen/primary_text_size"
                tools:text="0" />

            <TextView
                android:id="@+id/label_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following"
                android:textSize="@dimen/primary_text_size" />

            <TextView
                android:id="@+id/following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="15dp"
                android:textSize="@dimen/primary_text_size"
                tools:text="0" />

        </LinearLayout>

        <TextView
            android:id="@+id/label_repositories_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/primary_size"
            android:layout_marginBottom="@dimen/primary_size"
            android:text="@string/repositories"
            android:textSize="@dimen/primary_text_size" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/repos_list_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <TextView
        android:id="@+id/error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="@dimen/error_title"
        android:visibility="gone"
        tools:text="Error" />

</FrameLayout>