<resources>
    <string name="app_name">Github API</string>
    <string name="user_image">User Image</string>
    <string name="open_in_browser">Open in Browser</string>
    <string name="fork_count">Fork count</string>
    <string name="repositories">Repositories:</string>
    <string name="gists">Gists</string>
    <string name="following">Following:</string>
    <string name="followers">Followers:</string>
    <string name="commits">Commits:</string>
</resources>